--- a/templates/index.html
+++ b/templates/index.html
@@ -170,7 +170,7 @@
                   <label for="txtpin">PinCode:</label>
               </div>
               <div class="form-col" style="margin-left:28px">
-                  <input type="text" id="txtpin" name="txtpin" pattern="^\+?1?\d{9,15}$" required>
+                  <input type="text" id="txtpin" name="txtpin" maxlength="8" required>
               </div>
             </div>
           </div>
