--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -11,7 +11,10 @@
   <link href="{% static "vendor/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
 </head>
 <body class="bg-light">
-  <div class="container" style="margin-top:130px;margin-left:40px;margin-right:20px">
+  <div>
+    <h1  style="text-align:center;margin-top:20px;">Election Commision</h1>
+  </div>
+  <div class="container" style="margin-top:40px;margin-left:120px;margin-right:20px">
     <div class="row">
       <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
         <div class="card card-signin my-5">
